testsuite/tests/interpreter/sublist_builtin/test.out
2
3
[2, 3]
[1, 2, 3, 4, 5]
error: Invalid index: 0
script.lkql:6:7 in script.lkql
  6 | print(l.sublist(0, 5))
    |       ^^^^^^^^^^^^^^^
